Fixed bug #90 by applying changes from the Ptolemy II cvs